--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 
-spring.datasource.url=jdbc:mysql://localhost/inventaro
+spring.datasource.url=jdbc:mysql://localhost:3306/inventaro
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.formt_sql= true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
